Possible navbar shifting fix

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ ul {
     padding: 0px;
     gap: 20px;
     font-size: 22px;
+    border: 1px solid transparent;
+    border-radius: 2px 2px 0 0;
 }
 
 a {
